@@ -1,3 +1,8 @@
+SG-2004-02-26-1: Bugfix:    qmaster was not able to read in the scheduler
+                            configuration in classic spooling mode.
+                 Issue:     717
+                 Changed:   qmaster
+
 EB-2004-02-26-1: Bugfix:    qmon shows invalid messages if 
                             "show detached settings" button is pressed
                             renamed "qconf -sick" to "qconf -sds"
